--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,7 @@
 <Application x:Class="Snake.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:Snake.Converters"
              Startup="Application_Startup">
     <Application.Resources>
         <!-- Palette de couleurs moderne -->
@@ -118,5 +119,8 @@
         
         <!-- Converter pour convertir booléen en Visibility -->
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        
+        <!-- Converter pour convertir ScreenKind en Visibility -->
+        <converters:ScreenToVisibilityConverter x:Key="ScreenToVisibilityConverter"/>
     </Application.Resources>
 </Application>
